welcome.lessons.welcome.array.array667.Array667.scala.error
array667:8: error: ';' expected but 'else' found.
    else if ((nums(i)==7) && vu6) {
    ^